<resources>
    <string name="app_name">快清理</string>
    <string name="tab_task">福利</string>
    <string name="tab_clean">清理</string>
    <string name="tab_speed">加速</string>
    <string name="tab_tool">工具箱</string>
    <string name="tab_me">我的</string>
    <string name="permission_dialog_title">授权设置</string>
    <string name="permission_dialog_content">因读取步数信息和金币兑换、提现要求，需要您提供以下权限：</string>
    <string name="permission_dialog_text">设备信息、存储信息、位置信息</string>
    <string name="permission_dialog_button">去授权</string>
    <string name="ativity_top_title">我的金币</string>
    <string name="gold">金币</string>
    <string name="index_right_title">如何赚钱?</string>
    <string name="today_data">今日数据</string>
    <string name="text_get_money">领取阶段奖励</string>
    <string name="sync_wechet_step">微信同步</string>
    <string name="hot_activity">热门活动</string>
    <string name="mileage">公里</string>
    <string name="foot_mileage">步行里程</string>
    <string name="hour">时</string>
    <string name="sring_yh">\"</string>
    <string name="second">分</string>
    <string name="foot_time">步行时间</string>
    <string name="calories">千卡</string>
    <string name="foot_reliang">消耗热量</string>
    <string name="editor_info">邀请码：</string>
    <string name="goal_step">目标步数</string>
    <string name="money_record">金币收益记录</string>
    <string name="report_record">运动记录</string>
    <string name="userinfo_feedback">用户反馈</string>
    <string name="current_gold">当前金币</string>
    <string name="can_carry">可提现≈%s元</string>
    <string name="today_task">日常任务</string>
    <string name="newperson_task">新人任务</string>
    <string name="double_text">可翻倍</string>
    <string name="about_us">关于我们</string>
    <string name="settings">设置</string>
    <string name="withdrawal_way">提现方式</string>
    <string name="bind_phonenum_title">绑定手机号</string>
    <string name="bind_phonenum">手机号绑定</string>
    <string name="bind_tips">为确保账号安全，请确保手机号无误</string>
    <string name="input_num">请输入手机号</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="wechat_change">微信零钱</string>
    <string name="rapid_withdrawal">快速提现</string>
    <string name="withdrawal_instructions">提现说明</string>
    <string name="immediate_withdrawal">立即提现</string>
    <string name="withdrawal">提现</string>
    <string name="wothdrawal_record">提现记录</string>
    <string name="wechat_login">微信登录</string>
    <string name="agreed">已同意</string>
    <string name="service_agreement">《服务协议》</string>
    <string name="and">和</string>
    <string name="privacy_policy">《隐私条款》</string>
    <string name="wechat_login_tips">请先同意《服务协议》和《隐私条款》</string>
    <string name="sign_dialog_content">已签到<Data><![CDATA[<font color="#FFAD2B">%1$d</font>]]></Data>天，获得<Data><![CDATA[<font color="#FFAD2B">%2$d</font>]]></Data>金币</string>
    <string name="gold_double">翻倍奖励</string>
    <string name="sign_dialog_tips">连续签到7天，领取神秘宝箱</string>
    <string name="sign_dialog_allmoney">%1$d<Data><![CDATA[<font color="#FFAD2B">≈%2$s元</font>]]></Data></string>
    <string name="get_gold_num">恭喜获得<Data><![CDATA[<font color="#FFAD2B">%d</font>]]></Data>金币</string>
    <string name="get_gold">获得<Data><![CDATA[<font color="#FFAD2B">%d</font>]]></Data>金币</string>
    <string name="get_gold2"><Data><![CDATA[<font color="#FF9B0A">+%d</font>]]></Data></string>
    <string name="get_gold_num2">翻倍成功 共获得<Data><![CDATA[<font color="#FFAD2B">%d</font>]]></Data>金币</string>
    <string name="surprise_get_gold">意外获得惊喜奖励<Data><![CDATA[<font color="#FFAD2B">%d</font>]]></Data>金币</string>
    <string name="more_task">参与活动去赚钱</string>
    <string name="qq_group_tips">用户交流QQ群：%s</string>
    <string name="add_qq_group">加QQ群：%s</string>
    <string name="user_info">账户信息</string>
    <string name="head_picture">头像</string>
    <string name="nick">昵称</string>
    <string name="phone_num">手机号</string>
    <string name="wechat_num">微信账号</string>
    <string name="unbind">未绑定</string>
    <string name="bind">已绑定</string>
    <string name="go_bind">去绑定</string>
    <string name="change_nickname">更改昵称</string>
    <string name="save">保存</string>
    <string name="step">步</string>
    <string name="target_percentage">完成%1$d%%&#47;目标步数%2$d</string>
    <string name="consumption_text">消耗热量=&#160;&#160;%1$s个</string>
    <string name="reduce_co2">减少了%1$s克碳排放</string>
    <string name="wechat_login_tip">您的设备未安装微信客户端</string>
    <string name="empty_phone_tip">请输入手机号</string>
    <string name="correct_phone_tip">请输入正确的手机号</string>
    <string name="yzm_tip">请输入验证码</string>
    <string name="send_sms_success">短信验证码发送成功</string>
    <string name="regain_get">重新获取</string>
    <string name="yzm_tip2">验证码发送频繁,请稍后再试</string>
    <string name="bind_success">手机号绑定成功</string>
    <string name="me_once_login">立即登录</string>
    <string name="money_rmd">%s元</string>
    <string name="received">已领</string>
    <string name="sign_day">%s天</string>
    <string name="exit_login">退出登录</string>
    <string name="sign_day_tomorrow_golds">明日可获得<Data><![CDATA[<font color="#FF9E2B">%s</font>]]></Data>金币</string>
    <string name="turn_again">再转一圈</string>
    <string name="tv_continue">继续赚钱</string>
    <string name="withdrawal_tip">为了保障您的账户安全，请绑定手机号,绑定后您的所有数据将保存至手机账户中,可使账号处于保护状态</string>
    <string name="find_new">发现新版本V%s</string>
    <string name="update_title">新版本特性</string>
    <string name="no_update">残忍拒绝</string>
    <string name="once_update">立即更新</string>
    <string name="net_error">网络走丢了...</string>
    <string name="empty">暂无数据...</string>
    <string name="reload">重新尝试</string>
    <string name="updating">正在更新</string>
    <string name="exit_content">确定要退出登录吗</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="qqgroup_copy">QQ群号码已复制到剪切板</string>
    <string name="privacy_agreement">《隐私协议》</string>
    <string name="tv_agreed">同意</string>
    <string name="view_the_full_version">查看完整版</string>
    <string name="text1">用户条款及隐私协议</string>
    <string name="text2">我们依据最新的法律，向您说明全民走路软件的隐私政策，特向您推送本提示。请您阅读并充分理解相关条款</string>
    <string name="text3">我们承诺</string>
    <string name="text4">我们会严格按照《网络安全法》、《信息网络传播保护条例》等保护您的个人信息</string>
    <string name="text5">如果未经您的授权，我们不会使用您的个人信息用于您未授权的其他途径或目的</string>
    <string name="text6">您点击\"同意\"，即表示您已阅读并同意更新后的《服务协议》及《隐私政策》</string>
    <string name="withdrawal_success">提现成功</string>
    <string name="withdrawal_dialog_tips">请留意您的微信零钱</string>
    <string name="i_know">我知道了</string>
    <string name="nick_name_toast">昵称最多可填写10个字符</string>
    <string name="countdown_time">倒计时%s秒</string>
    <string name="continue_hard">继续努力</string>
    <string name="once_receive">立即领取</string>
    <string name="today_finish">今日已达标</string>
    <string name="watch_continue">看视频继续兑换</string>
    <string name="stepfailure">%s期未达标</string>
    <string name="stepreward">恭喜获得%s期步数达标奖金</string>
    <string name="steprace_gold">%s金币</string>
    <string name="steprace_signsuccess_title">成功报名%s期达标赛！</string>
    <string name="steprace_pay_title">是否支付报名达标赛契约金-%s期</string>
    <string name="activitygz">活动规则</string>
    <string name="myyqm">我的邀请码:</string>
    <string name="click_copy">点击复制</string>
    <string name="yqm_tip">邀请码已复制到剪切板</string>
    <string name="entry_record">参赛记录</string>
    <string name="nper_allreward">%s期&#160;达标总奖池(金币)</string>
    <string name="signsteprace_num">已有%s人报名</string>
    <string name="signin_race">报名比赛</string>
    <string name="get_reward_zige">获得奖励资格</string>
    <string name="dabiao_fenjiangjin">达标分奖金</string>
    <string name="race_jiesuan">比赛结算</string>
    <string name="watch_video">观看视频</string>
    <string name="finish_step">完成%s步</string>
    <string name="pay_qiyuejin">支付契约金</string>
    <string name="three_step_reward">三步赚取运动奖金</string>
    <string name="next_nper_sign_info">下期(%1$s)&#160;%2$s人健步赛报名</string>
    <string name="reward_all_gold">奖励总额(金币)</string>
    <string name="sign_num_people">报名人数(人)</string>
    <string name="dabiao_num">达标人数:%s</string>
    <string name="all_jiangchi">总奖池:%s</string>
    <string name="targetstep_nowstep"><Data><![CDATA[<font color="#FFDF3F">%1$s</font>]]></Data>/%2$s步</string>
    <string name="sign_next_race">报名下一期</string>
    <string name="check_activity_gz">查看活动规则></string>
    <string name="invite_code">邀请码</string>
    <string name="input_invite_code">填写邀请码</string>
    <string name="invite_code_tip">输入邀请码(向您的邀请人索要)</string>
    <string name="once_submit">立即提交</string>
    <string name="signsuccess_today">%s(今天)</string>
    <string name="success_sign_mingtian">成功报名明日比赛</string>
    <string name="success_racebegin_time">%s(00:00)</string>
    <string name="success_racebegin_tips">比赛开始，开始记步</string>
    <string name="success_endrace_time">%s(23:59)</string>
    <string name="success_endrace_tips">比赛结束，停止同步步数，预期同步的步数无效</string>
    <string name="success_kaijiang_time">%s(00:00)</string>
    <string name="success_kaijiang_tips">结算收益，派发奖励金</string>
    <string name="success_dialog_tips">注：请在每天24点前进入达标赛页面同步最终步数</string>
    <string name="failure_dialog_content">你与大奖擦肩而过啦，继续努力吧</string>
    <string name="pay_now">立即支付</string>
    <string name="yuqidabiao_jiangjin">%s期&#160;预期达标获得奖金(金币)</string>
    <string name="jinxingzhong">进行中</string>
    <string name="yidabiao">已达标</string>
    <string name="open_race_time">距离开赛还有%s</string>
    <string name="open_reward_time">距离开奖还有%s</string>
    <string name="is_baoming">已报名</string>
    <string name="share_friend">分享给好友</string>
    <string name="share_friend_tips">邀请成功一位好友可得2000金币</string>
    <string name="step_history_title">%s步达标赛&#160;参赛记录</string>
    <string name="race_history_item_title">达标赛-%s期</string>
    <string name="race_history_item_allreward">总奖金池(金币)</string>
    <string name="race_history_item_dabiao">达标人数</string>
    <string name="race_history_item_jianglijin">奖励金(金币)</string>
    <string name="race_history_racenum">参赛次数</string>
    <string name="race_history_maxpoints">最高奖励金</string>
    <string name="race_history_maxstep">最高步数</string>
    <string name="race_history_item_weikaisai"><Data><![CDATA[<font color="#FF6233">未开赛</font>]]></Data></string>
    <string name="race_history_item_yidabiao"><Data><![CDATA[<font color="#368DFF">已达标</font>]]></Data></string>
    <string name="race_history_item_weidabiao"><Data><![CDATA[<font color="#A7AACB">未达标</font>]]></Data></string>
    <string name="please_input_invite_code">请输入邀请码</string>
    <string name="submit_success">提交成功</string>
    <string name="kaiqi">开启</string>
    <string name="qiandao">签到</string>
    <string name="tixing">提醒</string>
    <string name="qd_content">每日签到不错过，连续签到\n更有惊喜宝箱</string>
    <string name="open_remind">开启提醒</string>
    <string name="tq_gold">领取特权金币</string>
    <string name="open_success">开启签到提醒成功</string>
    <string name="new_red">收到新人红包</string>
    <string name="surprised_red">收到惊喜红包</string>
    <string name="save_red">已存入现金收益</string>
    <string name="red_gold">%s金币</string>
    <string name="red_rmb">约%s元</string>
    <string name="tv_rmb">%s元</string>
    <string name="tomorrow_text">明日登陆再得%s金币</string>
    <string name="into_app">进入全民走路</string>
    <string name="how_gold">%s金币</string>
    <string name="integral_tip">边玩边赚</string>
    <string name="integral_tip1">试玩应用赚巨额金币</string>
    <string name="integral_download_tip">下载打开即可获取高额奖励</string>
    <string name="integral_open_tip">打开软件即可获取高额奖励</string>
    <string name="download_install">下载并安装</string>
    <string name="start_there">在此打开即得</string>
    <string name="download_string">下载</string>
    <string name="install_string">安装</string>
    <string name="finished_string">已完成</string>
    <string name="open_here">打开</string>
    <string name="test_play">领取</string>
    <string name="check_install">请检查是否安装%s</string>
    <string name="is_start_download">已开始下载</string>
    <string name="downloading">下载中</string>
    <string name="today_finished">奖励已领取</string>
</resources>