<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:background="@drawable/shape_corner"
        android:orientation="vertical"
        >

        <TextView
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="16sp"
            android:textColor="@color/black_3c3d5b"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/text2"
            android:textSize="14sp"
            android:textColor="@color/gray_7e9c"
            />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textColor="@color/black_3c3d5b"
            android:textSize="14sp"
            />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@mipmap/agreenment_icon2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray_a5a8ca"
                android:layout_marginLeft="8dp"
                android:text="@string/text4"
                />
            
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@mipmap/agreenment_icon1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray_a5a8ca"
                android:layout_marginLeft="8dp"
                android:text="@string/text5"
                />

        </LinearLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/gray_7e9c"
            android:text="@string/text6"
            />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_the_full_version"
                android:textColor="@color/gray_a5a8ca"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/service_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement"
                android:textColor="@color/green_43d5"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="@color/gray_a5a8ca"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/privacy_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_agreement"
                android:textColor="@color/green_43d5"
                android:textSize="12sp"
                />
        </LinearLayout>






        <View
            android:layout_marginTop="12dp"
            android:id="@+id/view_divi"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_f9f9"
            />
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:visibility="visible"
            >

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/view_the_full_version"
                android:gravity="center"
                android:textColor="@color/gray_a7aa"
                android:textSize="16sp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_f9f9"
                />
            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tv_agreed"
                android:gravity="center"
                android:textColor="@color/green_43d5"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>