<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <include
        android:id="@+id/tab_bar"
        layout="@layout/include_title_layout"
        />
    <TextView
        android:id="@+id/tv1"
        android:layout_below="@+id/tab_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black_3d5c"
        android:text="@string/bind_phonenum"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_tips"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/gray_7e9c"
        android:textSize="14sp"
        />

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/phone_icon"
            />
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textSize="16sp"
            android:textColor="@color/gray_a7aa"
            android:layout_toRightOf="@+id/iv_phone"
            />
        <EditText
            android:id="@+id/input_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv3"
            android:hint="@string/input_num"
            android:inputType="phone"
            android:textColorHint="@color/gray_d7d7"
            android:textSize="14sp"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black_3d5c"
            android:textCursorDrawable="@drawable/shape_cursor_color"
            />
        <TextView
            android:id="@+id/bt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_yzm"
            android:layout_alignParentRight="true"
            android:textSize="14sp"
            android:textColor="@color/c_2C9DFF"
            />
    </RelativeLayout>
    <View
        android:id="@+id/view_divid"
        android:layout_below="@+id/layout1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        style="@style/dividing_line_normal"/>

    <EditText
        android:layout_below="@+id/view_divid"
        android:id="@+id/input_yzm"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_yzm"
        android:textColorHint="@color/gray_d7d7"
        android:textSize="14sp"
        android:textColor="@color/black_3d5c"
        android:background="@null"
        android:textCursorDrawable="@drawable/shape_cursor_color"

        />
    <View
        android:layout_below="@+id/input_yzm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        style="@style/dividing_line_normal"/>
    
    <TextView
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="66dp"
        android:background="@mipmap/btn_click"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_bind"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

</RelativeLayout>