<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="335dp"
    android:layout_height="wrap_content"
    android:background="@null"
    android:minHeight="288dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/shape_corner"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:background="@drawable/shape_corner_top"
            android:gravity="center"
            android:text="@string/permission_dialog_title"
            android:textColor="@color/c_3D3F5C"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="提示" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:gravity="left"
            android:text="@string/permission_dialog_content"
            android:textColor="@color/c_3D3F5C"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="@string/permission_dialog_content" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:text="@string/permission_dialog_text"
            android:textColor="@color/c_7E809C"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />

        <Button
            android:id="@+id/btn_auto"
            android:layout_width="287dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@mipmap/green_btn_bg"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/permission_dialog_button"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/permission_dialog_button" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>